Upgraded gradle so we can debug